smple crud start

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
-$primary: white;
+$primary: blue;
 body {
   background: $primary;
 }
